SERVER-23192 Ensure we always stop monitoring replica sets that failed to be added as shards